@@ -39,7 +39,9 @@
 <blockquote>
 <ul class="simple">
 <li>coders/meta.c (convertHTMLcodes): Fix SourceForge bug #373
-&quot;out-of-bounds read in coders/meta.c:444:50&quot;</li>
+&quot;out-of-bounds read in coders/meta.c:444:50&quot;
+(ReadMETAImage): Fix SourceForge bug #364 &quot;out-of-bounds write in
+coders/meta.c:1331:7&quot;.</li>
 </ul>
 </blockquote>
 <p>2016-03-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
